# wsiserver

./: README.md  pyproject.toml
example/: index.html  index.js
src/wsiserver/: app.py
