[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wsiserver"
description = "Very simple wsi server"
authors = [
    {name = "Takumi Ando", email="takumi.ando826@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3.6",
]
dependencies = [
    "fastapi",
    "openslide-python",
    "pillow",
    "uvicorn"
]
dynamic = ["version"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "wsiserver.__version__"}

[tools.flake8]
max-line-length = 120

[project.scripts]
wsiserver = "wsiserver.app:main"